--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,6 +1,8 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?puujxi#1" target="_blank">首页</a> | <a href="https://d282b678eon3c.cloudfront.net/1?dthgmzqc" target="_blank">动态网</a> | <a href="https://dep6yudto3kbo.cloudfront.net/2?metmihgkt" target="_blank">大纪元</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/4?akmjx" target="_blank">看中国</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/pHh5q?idbobwzj" target="_blank">新生网</a> | <a href="https://d1z1i6xmekcnf1.cloudfront.net/tktpt?ofayqazik" target="_blank">阿波罗网</a> | <a href="https://d1kgsi70b35buf.cloudfront.net/Mjpvu?tvoyc" target="_blank">干净世界</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/10?aewtapbj" target="_blank">退党服务</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/Rffqf?klotqhee" target="_blank">明慧广播</a> | <a href="https://d34v2ua3ud12rg.cloudfront.net/nw9Vn?kpwhd" target="_blank">传奇时代</a> | <a href="https://doh73o6c3dnba.cloudfront.net/AF9AG?zxviihmw" target="_blank">新境界影视</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/zqMQA?mkdutih" target="_blank">文昭谈论</a> | <a href="https://d1fejrztdgsube.cloudfront.net/7?qselidxb" target="_blank">明慧</a></p><p><a href="https://d1qenr1x5ix28c.cloudfront.net/9?zdpbvb" target="_blank">大法</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/3?wbeevxjcx" target="_blank">新唐人</a> | <a href="https://d1q5zi9q4mpi9f.cloudfront.net/obAhT?ewdboowyj" target="_blank">人民报</a> | <a href="https://db8nk66phkh66.cloudfront.net/xXNHu?wucvzo" target="_blank">放光明</a> | <a href="https://d3siwajeg0khti.cloudfront.net/5?odwlmbvnp" target="_blank">新纪元</a> | <a href="https://dgk92ykceobaf.cloudfront.net/6?jqzjn" target="_blank">希望之声</a> | <a href="https://d1fejrztdgsube.cloudfront.net/11?wbuqsqs" target="_blank">无界网络</a> | <a href="https://d1qf0g0z67vzsk.cloudfront.net/Pueji?gexfpf" target="_blank">追查国际</a> | <a href="https://d27hok1oawuvj8.cloudfront.net/16?juyfeu" target="_blank">明慧之窗</a> | <a href="https://d3b82atanl11dg.cloudfront.net/LdvzZ?kfwzpptpb" target="_blank">细语人生</a> | <a href="https://d3siwajeg0khti.cloudfront.net/fBn3r?tmlcqw" target="_blank">新世纪影视</a> | <a href="https://dtjix0ckmebpi.cloudfront.net/PUWMb?elitecx" target="_blank">江峰时刻</a> | <a href="https://d1ed4zj8eeit74.cloudfront.net/8?pombo" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/1992513/www/blob/master/README.md?oyxdfwk#1" target="_blank">首页</a> | <a href="https://d8jw662akk94j.cloudfront.net/1?qyppbcc" target="_blank">动态网</a> | <a href="https://dm41kyod3ht9r.cloudfront.net/2?pmekmk" target="_blank">大纪元</a> | <a href="https://d2torrlf4djx10.cloudfront.net/4?lkorbjk" target="_blank">看中国</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/pHh5q?notlt" target="_blank">新生网</a> | <a href="https://d1lulvfep8g527.cloudfront.net/tktpt?goefm" target="_blank">阿波罗网</a> | <a href="https://d26llhbq1ka51o.cloudfront.net/Mjpvu?stswd" target="_blank">干净世界</a> | <a href="https://d2ktwgchvgcnzd.cloudfront.net/10?cataobca" target="_blank">退党服务</a> | <a href="https://d337p4rc38c0de.cloudfront.net/Rffqf?utrqeg" target="_blank">明慧广播</a> | <a href="https://d3ap8ixfubqypf.cloudfront.net/nw9Vn?zlkqhrnqg" target="_blank">传奇时代</a> | <a href="https://d1t2us6hq0fx1u.cloudfront.net/AF9AG?squlfvg" target="_blank">新境界影视</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/zqMQA?aqqcjgzek" target="_blank">文昭谈论</a> | <a href="https://dsqxb3b7muii1.cloudfront.net/7?hloasvd" target="_blank">明慧</a></p><p><a href="https://d3myewunzonann.cloudfront.net/9?ljfhrv" target="_blank">大法</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/3?dagvooapn" target="_blank">新唐人</a> | <a href="https://d23a1u4ljgwmvy.cloudfront.net/obAhT?dfxobmsi" target="_blank">人民报</a> | <a href="https://d21y52w6f35pla.cloudfront.net/xXNHu?truzgjqp" target="_blank">放光明</a> | <a href="https://d1itcd32obhl6s.cloudfront.net/5?smzlqgkyl" target="_blank">新纪元</a> | <a href="https://dcz6rimunj42y.cloudfront.net/6?nfbaxqqg" target="_blank">希望之声</a> | <a href="https://d2gp1icp8dv5pn.cloudfront.net/11?eoavwlbu" target="_blank">无界网络</a> | <a href="https://d3a3umoypakbtm.cloudfront.net/Pueji?xoiplzx" target="_blank">追查国际</a> | <a href="https://dl1ez95kskssm.cloudfront.net/16?emsxm" target="_blank">明慧之窗</a> | <a href="https://dycmgeziwp90b.cloudfront.net/LdvzZ?pvabj" target="_blank">细语人生</a> | <a href="https://d19vw3711v9lks.cloudfront.net/fBn3r?kszmspdg" target="_blank">新世纪影视</a> | <a href="https://dn3dhcszbgs9s.cloudfront.net/PUWMb?enkzmy" target="_blank">江峰时刻</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/8?dsjntust" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/07/id14038136-GettyImages-1541243026-320x200.jpg"><p align="center">中共三中全会确定会期 专家：释恐惧垮台信号</p></a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1" title="中共三中全会确定会期 专家：释恐惧垮台信号""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/07/id14038136-GettyImages-1541243026-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278650.md#1" title="中共两任防长魏凤和、李尚福被送检起诉""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/06/id13759554-000_32CC3G8-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278455.md#1" title="大陆消费不振实体店倒闭 民众的钱去哪儿了""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278537-a-320x200.png">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278550.md#1" title="中国5月工业利润增速大幅放缓 凸显经济困境""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14261390-GettyImages-2154348738-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278182.md#1" title="玻利维亚发生未遂政变 前陆军将领被捕""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278212-GettyImages-2158834562-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278422.md#1" title="美宗教自由报告揭露中共攻击神韵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2022/07/id13776197-159201-320x200.jpg">&nbsp;</a>
@@ -10,26 +12,24 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278077.md#1" title="中国留学生被遣返 美驻华大使回应""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14266308-GettyImages-2147851956-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277973.md#1" title="分析：中共四处拱火树敌 自身战略或受阻""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/05/id14256586-20240523PHO0130l-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1" title="她的过去和现在：用舞蹈完成父亲遗愿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14277956-amazon-new-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277978.md#1" title="美国会听证 聚焦中共利用补贴主宰全球战略""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14265251-1303021302082003-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277676.md#1" title="分析：拜登川普首场电视辩论的风险和机会""><img width="73" src="https://i.epochtimes.com/assets/uploads/2024/06/id14277723-Trump-Biden-Debate-1-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://1992513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a><br>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1">上海知名橱柜公司“全屋定制”门店人去楼空</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1">中共三中全会确定会期 专家：释恐惧垮台信号</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278650.md#1">中共前防长魏凤和、李尚福被公开宣布受查</a><br>
+:clock8: <em>49分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278607.md#1">专家推荐搭机前吃这种水果 让飞行更舒适</a><br>
+:clock8: <em>54分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278580.md#1">上海知名橱柜公司“全屋定制”门店人去楼空</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1">中共三中全会确定会期 专家：释恐惧垮台信号</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278650.md#1">中共两任防长魏凤和、李尚福被送检起诉</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277021.md#1">大陆牛肉价格大跳水 养牛人亏惨了</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277262.md#1">华为旗下车企罕见跌停 市值一天蒸发144亿</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277535.md#1">“高考达人”梁实再落榜 称“心情烂透了”</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276891.md#1">广东万科金融大楼突然晃动 市民：像在坐船</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277472.md#1">长江中下游干支流水位再涨 恐发生城市内涝</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277417.md#1">【翻墙必看】实拍大陆实体店的空空荡荡</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278076.md#1">中国体坛持续震荡 象棋特级大师王天一被查</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278028.md#1">美驻华大使：中共支持俄罗斯是重大错误</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277314.md#1">投资湖南桃花源古镇 大批投资者血本无归</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277319.md#1">中国经济衰退冲击养老院 农村现“退院潮”</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278076.md#1">中国体坛持续震荡 象棋特级大师王天一被查</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277220.md#1">大陆律师频向法官行贿 分析：充当白手套</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/8/n14243928.md#1">人类存亡危机与创世主的恩典</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/5/6/n14241958.md#1">【特稿】人类起源问题的终极答案</a><br>
@@ -40,7 +40,7 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145798.md#1">【图解】川普面临的法律挑战</a><br>
 <br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1">更多......</a></p></td><td VALIGN=TOP width="371">
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278609.md#1">中共三中全会确定会期 专家：释恐惧垮台信号</a><br>
-<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278650.md#1">中共前防长魏凤和、李尚福被公开宣布受查</a><br>
+<a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278650.md#1">中共两任防长魏凤和、李尚福被送检起诉</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277722.md#1">中国一季度结婚人数大降 专家：年轻人已绝望</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277901.md#1">美泳坛奥运名将国会作证 吁世界反禁药组织改革</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278215.md#1">中国医学博士生苦读六年拿不到学位 上网求助</a><br>
@@ -99,13 +99,13 @@
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275201.md#1">中共抛司法22条针对台湾 分析：虚声恐吓</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/22/n14275099.md#1">【菁英论坛】南海冲突升温 普京要来插手？</a><br>
 <a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274928.md#1">【新闻大家谈】亲历六四 李英之艰难抗共35年</a><br>
-<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d9pjce8brka6f.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d9pjce8brka6f.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,554</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d1jc3g7s75t889.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/1992513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/1992513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://d1jc3g7s75t889.cloudfront.net/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 45,554</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 432,369,816 人
+!共 432,372,012 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14278378-Unknown3-320x200.jpeg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278372.md#1">重庆妇女控诉 医疗事故导致其家破人亡</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278214.md#1">蒙古国知名歌手演出被中共取消</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278153.md#1">作高智晟壁画偿夙愿 逃美教师找到人生新起点</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277784.md#1">中国民主党两主席陷囹圄 海外党员吁中共释放</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277221.md#1">新报告揭器官移植产业背后中共活摘暴行</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276320.md#1">重庆著名书法家陈清彬遭中共绑架</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278505.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14145626-656162-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278505.md#1">消息：中国国企设年薪上限 要求员工退薪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278217.md#1">关税致生产转移 沃尔沃电动车推迟对美交付</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278158.md#1">胡锡进炒股一年亏逾7万 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278073.md#1">北京下调购房首付刺激楼市 民众不看好</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278037.md#1">因经济担忧 大陆国债收益率降至22年来最低</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277953.md#1">欧盟对华电动车关税如何发展 美欧做法有不同</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14134752-dong-320x200.png"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278595.md#1">上海前人大主任受审 曾被指帮情妇获政协委员资格</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278503.md#1">中共党媒高官称记者写稿要当奏折写 引热议</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278604.md#1">台陆委会提高陆港澳旅游警示 建议避免前往</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278435.md#1">国台办称欢迎再来 台网红：想请我吃鸿门宴</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278075.md#1">限韩令解封又收紧 韩乐队在华演出突遭取消</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277994.md#1">保护黑恶势力 陕西纪委书记和公安副厅长遭举报</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14276271-6190399658d0aa81774f0f6c042a418d-e1719478794476-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278534.md#1">中国6省34条河流现超警洪水 湘江洪峰过境长沙</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/27/n14278369.md#1">长春房屋坍塌酿5伤1失踪 民拍视频被威胁</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277700.md#1">浙江水亭门古城墙北段坍塌 现场画面曝光</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277679.md#1">云南丽江17分钟连发3次地震 最高4.5级</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277265.md#1">内蒙古一家五口灭门案 网曝嫌犯被逼急杀人</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276882.md#1">中国35条河流发超警洪水 上海将迎最强暴雨</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14277966-GettyImages-1630323658-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277952.md#1">苏州袭击事件后 旅居上海的日本人提高警觉</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277745.md#1">接连2起外国人遇袭案 中共被指放任仇外情绪</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277493.md#1">三退声明精选（2024/06/25）</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276852.md#1">办银行卡需要派出所同意 长春储户不满</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276784.md#1">中国农村中小银行洗牌 7天40家合并或解散</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276725.md#1">日本妈妈和孩子在苏州遇袭 日驻华使馆回应</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2024/06/id14268174-11_id13734986-000_9UB6PT-320x200.jpg"></a><a href="https://github.com/1992513/djy/blob/master/gb/24/6/11/n14268173.md#1">中国学术界频造假 学者：像病毒在污染世界</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266062.md#1">高考首日 新课标作文题被吐槽 海南未发条形码</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265798.md#1">中国高考首用AI监控 被疑技术不完善恐有误判</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265024.md#1">揭秘：中共利用加国大学培养军事科学家</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14263339.md#1">《64三十五年祭》作曲者：不曾褪色的使命</a><br><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14259194.md#1">造假风气蔓延至香港 陆生以假文凭入读港大</a><br><br><p align="center"><a href="https://github.com/1992513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/1992513/djy/blob/master/gb/24/4/2/n14216942.md#1">【独家】和两任总理闹矛盾 习经济会突离场</a><br>
